export const snapshot = {};

snapshot[`option 1`] = `
{
  anyOf: [
    {
      type: "null",
    },
    {
      type: "string",
    },
  ],
  discriminator: "type",
}
`;

snapshot[`option 2`] = `
{
  anyOf: [
    {
      type: "null",
    },
    {
      type: "string",
    },
  ],
  description: "One.",
  discriminator: "type",
}
`;

snapshot[`option 3`] = `
{
  anyOf: [
    {
      type: "null",
    },
    {
      type: "string",
    },
  ],
  description: "One. Two.",
  discriminator: "type",
}
`;
